--- a/30188117/index.html
+++ b/30188117/index.html
@@ -5,87 +5,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATI[UCV] 2025-2</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        .ucv {
-            font-size: 0.6em;
-        }
-        header {
-            background-color: #87b1ef; 
-            color: white;
-            padding: 10px 0;
-        }
-        footer{
-            background-color: #87b1ef; 
-            color: black;
-            padding: 10px 0;
-            text-align: center;
-            font-size: 1.2em;
-        }
-        .cabecera{
-            width: 100%;
-            display: flex; 
-            justify-content: space-between; 
-        }
-        nav ul {
-            display: flex;
-            list-style: none;
-            margin: 0;
-        }
-        nav li {
-            margin-right: 30px; 
-            font-size: 1.2em;  
-             list-style: none;   
-        }
-        .saludo {
-            margin-right: 30px; 
-            font-size: 1.2em;  
-            list-style: none;   
-        }
-        .personas {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-wrap: wrap; 
-            justify-content: flex-start;
-        }
-        .personas li {
-            width: 25%; 
-            padding: 10px;
-            box-sizing: border-box;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .estudiantes {
-            border: 1px solid #ccc;
-            padding: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            background-color: rgba(230, 229, 229, 0.562);
-            display: inline-block;
-            width: 90%; 
-        }
-        .estudiantes img {
-            width: 200px;
-            height: 200px;
-            object-fit: contain;
-            border: 2px;
-            margin-bottom: 10px;
-
-
-        }
-        .estudiantes p{
-            color: #87b1ef;
-            font-size: 1.5em
-        }
+    <link rel="stylesheet" href="style.css">
     </style>
 </head>
-<body>
-<header>
+<body id="indexb">
+<header id="indexh">
     <div class="cabecera">
         <nav>
             <ul>
