--- a/30188117/perfil.html
+++ b/30188117/perfil.html
@@ -5,40 +5,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Berne </title>
-    <style>
-        body {
-            display: flex;
-        }
-        h1 {
-            color: #a81111;
-        }
-
-        img {
-            width: 200px; 
-            border-top-left-radius: 50px;
-            margin-right: 5px; 
-        }
-        .texto {
-            background-color: white;
-            padding: 20px 30px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 10);
-            border: 1px solid black;
-        }
-        p1 {
-            font-family: 'Arial', sans-serif;
-            font-style: italic;
-        }
-        #correo {
-            color: orange;          
-            text-decoration: none; 
-        }
-
-        #correo:active {
-            color: red; 
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="perfilb">
     <img src = "30188117.jpg">
 
     <div class = "texto">
