--- a/30188117/reto1/index.html
+++ b/30188117/reto1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -8,101 +9,102 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body id="indexb">
-<header id="indexh">
-    <div class="cabecera">
-        <nav>
-            <ul>
-                <li>
-                    <span>ATI<span class="ucv">[UCV]</span> 2025-2</span>
-                </li>
-            </ul>
-        </nav>
-                <li class="saludo">
-                    Hola, Gustavo
-                </li>       
-        <form class="busqueda">
-            <input type="text" placeholder="Nombre...">
-            <button type="submit">Buscar</button>
-        </form>
-    </div>
-</header>
+    <header id="indexh">
+        <div class="cabecera">
+            <nav>
+                <ul>
+                    <li>
+                        <span>ATI<span class="ucv">[UCV]</span> 2025-2</span>
+                    </li>
+                </ul>
+            </nav>
+            <li class="saludo">
+                Hola, Gustavo
+            </li>
+            <form class="busqueda">
+                <input type="text" placeholder="Nombre...">
+                <button type="submit">Buscar</button>
+            </form>
+        </div>
+    </header>
     <section>
-        <div class ="dummies">
-            <ul class = "personas">
+        <div class="dummies">
+            <ul class="personas">
                 <li>
-                    <div class = "estudiantes">
-                        <img src="30188117.jpg">
+                    <div class="estudiantes">
+                        <img src="30188117Pequena.jpg">
                         <p>Gustavo Berne</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy1/dummy.jpg">
                         <p>Aitana Bommati</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy2/dummy.jpg">
                         <p>Alexia Putellas</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy3/dummy.jpg">
                         <p>Guro Reiten</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy4/dummy.jpg">
                         <p>Gerd Muller</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy5/dummy.jpg">
                         <p>Carlos Alberto</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy6/dummy.jpg">
                         <p>Mane Garrincha</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy2/dummy.jpg">
                         <p>Patricia Guijarro</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy1/dummy.jpg">
                         <p>Salma Paralluelo</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy5/dummy.jpg">
                         <p>Jorge Campos</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy3/dummy.jpg">
                         <p>Lucy Bronze</p>
                     </div>
                 </li>
                 <li>
-                    <div class = "estudiantes">
+                    <div class="estudiantes">
                         <img src="dummies/dummy4/dummy.jpg">
                         <p>Peter Crouch</p>
                     </div>
                 </li>
-            </ul>         
+            </ul>
         </div>
     </section>
     <footer>
@@ -111,4 +113,5 @@
         </div>
     </footer>
 </body>
+
 </html>
