--- a/30188117/reto1/index.html
+++ b/30188117/reto1/index.html
@@ -34,7 +34,11 @@
             <ul class="personas">
                 <li>
                     <div class="estudiantes">
-                        <img src="30188117Pequena.jpg">
+        <picture>
+            <source media="(min-width: 320px)" srcset="30188117Pequena.jpg" />
+            <source media="(min-width: 769px)" srcset="30188117Grande.jpg" />
+            <img src="30188117Grande.jpg" alt="Foto de perfil de Gustavo Berne">
+        </picture>
                         <p>Gustavo Berne</p>
                     </div>
                 </li>
