--- a/30188117/reto1/perfil.html
+++ b/30188117/reto1/perfil.html
@@ -47,8 +47,8 @@
                         <td>The last of us y Red dead redemption 2</td>
                     </tr>
                     <tr>
-                        <td style="font-weight: bold;">Lenguajes aprendidos:</td>
-                        <td style="font-weight: bold;">C++, java, python</td>
+                        <td id="lenguajes">Lenguajes aprendidos:</td>
+                        <td id="lenguajes">C++, java, python</td>
                     </tr>
                 </tbody>
             </table>
