--- a/30188117/reto1/perfil.html
+++ b/30188117/reto1/perfil.html
@@ -14,7 +14,7 @@
         <picture>
             <source media="(min-width: 320px)" srcset="30188117Pequena.jpg" />
             <source media="(min-width: 769px)" srcset="30188117Grande.jpg" />
-            <img src="30188117Grande.jpg" alt="Foto de perfil de Gustavo Berne">
+            <img src="30188117Grande.jpg" alt="Foto de perfil de Gustavo Berne" id="foto_perfil">
         </picture>
 
 
