--- a/30188117/reto1/index.html
+++ b/30188117/reto1/index.html
@@ -44,67 +44,67 @@
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy1/dummy.jpg">
+                        <img src="dummy1/dummy.jpg">
                         <p>Aitana Bommati</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy2/dummy.jpg">
+                        <img src="dummy2/dummy.jpg">
                         <p>Alexia Putellas</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy3/dummy.jpg">
+                        <img src="dummy3/dummy.jpg">
                         <p>Guro Reiten</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy4/dummy.jpg">
+                        <img src="dummy4/dummy.jpg">
                         <p>Gerd Muller</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy5/dummy.jpg">
+                        <img src="dummy5/dummy.jpg">
                         <p>Carlos Alberto</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy6/dummy.jpg">
+                        <img src="dummy6/dummy.jpg">
                         <p>Mane Garrincha</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy2/dummy.jpg">
+                        <img src="dummy2/dummy.jpg">
                         <p>Patricia Guijarro</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy1/dummy.jpg">
+                        <img src="dummy1/dummy.jpg">
                         <p>Salma Paralluelo</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy5/dummy.jpg">
+                        <img src="dummy5/dummy.jpg">
                         <p>Jorge Campos</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy3/dummy.jpg">
+                        <img src="dummy3/dummy.jpg">
                         <p>Lucy Bronze</p>
                     </div>
                 </li>
                 <li>
                     <div class="estudiantes">
-                        <img src="dummies/dummy4/dummy.jpg">
+                        <img src="dummy4/dummy.jpg">
                         <p>Peter Crouch</p>
                     </div>
                 </li>
