--- a/reto1/perfil.html
+++ b/reto1/perfil.html
@@ -5,57 +5,47 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gustavo Berne </title>
+    <title> </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="container">
     <div class="perfil">
-        <picture>
-            <source media="(min-width: 320px)" srcset="30188117Pequena.jpg" />
-            <source media="(min-width: 769px)" srcset="30188117Grande.jpg" />
-            <img src="30188117Grande.jpg" alt="Foto de perfil de Gustavo Berne" id="foto_perfil">
-        </picture>
-
-
         <div class="texto">
             <h1>
-                Gustavo Berne
+                
             </h1>
             <p1>
-                Soy estudiante del 6to semestre de Computación de la UCV. Me gustan los videojuegos y los deportes
-                ádemas de
-                ver películas
-                de distintos géneros.
+               
             </p1>
             <table>
                 <tbody>
                     <tr>
-                        <td>Mi color favorito es:</td>
-                        <td>Rojo</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>Mi libro favorito es:</td>
-                        <td>El hacedor de ilusiones</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>Estilo de música preferida es:</td>
-                        <td>Rap</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>Mis videojuegos favoritos son:</td>
-                        <td>The last of us y Red dead redemption 2</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td id="lenguajes">Lenguajes aprendidos:</td>
-                        <td id="lenguajes">C++, java, python</td>
+                        <td id="lenguajes"></td>
+                        <td id="lenguajes"></td>
                     </tr>
                 </tbody>
             </table>
 
             <p2>
-                Si necesitan comunicarse conmigo me pueden escribir a: <a href="mailto:gbernev@gmail.com"
-                    id="correo">gbernev@gmail.com</a>
+                 <a href="mailto:"
+                    id="correo"></a>
             </p2>
         </div>
     </div>
