listado de estudiantes dinámico usando javascript

--- a/reto1/index.html
+++ b/reto1/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="datos/index.json" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
 
-    <template id="personas">
+    <template id="galleryItem">
         <li>
             <a href="">
                 <img class="galleryimg" src="">
@@ -30,16 +30,15 @@
                 <li>
                     <form action="" method="get">
                         <input type="text" id="busqueda" placeholder="Nombre...">
-                        <button type="submit"></button>
+                        <button type="submit"  id="boton"></button>
                     </form>
                 </li>
             </ul>
         </nav>
     </header>
     <section>
-        <ul class="personas">
+        <ul class="gallery">
         </ul>
-        </div>
     </section>
     <footer>
         Copyright 2025 Escuela de Computación - ATI. Todos los derechos reservados
