perfil con información dinámica

--- a/reto1/index.html
+++ b/reto1/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li id="logo">ATI<span>[UCV]</span>2025-2</li>
-                <li id="saludo">Hola,</li>
+                <li id="saludo"></li>
                 <li>
                     <form action="" method="get">
                         <input type="text" id="busqueda" placeholder="Nombre...">
