--- a/reto1/perfil.html
+++ b/reto1/perfil.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> </title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="js/perfil.js" defer></script>
 </head>
 
 <body id="container">
