--- a/reto1/perfil.html
+++ b/reto1/perfil.html
@@ -14,10 +14,10 @@
     <div class="perfil">
         <div class="texto">
             <h1>
-                
+
             </h1>
             <p1>
-               
+
             </p1>
             <table>
                 <tbody>
@@ -45,8 +45,7 @@
             </table>
 
             <p2>
-                 <a href="mailto:"
-                    id="correo"></a>
+                <a href="mailto:" id="correo"></a>
             </p2>
         </div>
     </div>
