--- a/reto1/index.html
+++ b/reto1/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATI[UCV] 2025-2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script type="text/javascript" src="datos/index.json" defer></script>
     <script type="text/javascript" src="js/index.js" defer></script>
